# kakoune

recon/: Cargo.toml
recon/frontends/recon-cursive/: Cargo.toml
recon/server/: Cargo.toml
recon/xtask/: Cargo.toml
