[workspace]
members = [
    "frontends/*",
    "server/",
    "xtask/",
]
# [package]
# name = "recon"
# version = "0.1.0"
# edition = "2018"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# cursive = { version = "0.16.3", default-features = false, features = [ "crossterm-backend" ] }
